Modified CSS file

--- a/assets/style.css
+++ b/assets/style.css
@@ -80,6 +80,7 @@ hr {
 .benefits-section-img-container img {
     width: 200px;
     height: 200px;
+    border-radius: 10px;
     border: solid #000000af 3px;
 }
 
