--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,7 @@
 
 .search-container {
     background-color: brown;
-    padding: 10px;
+    padding: 20px;
     border-radius: 20px;
     margin-top: 10px;
 }
@@ -14,6 +14,7 @@
     padding: 10px;
     border: 2px solid brown;
     border-radius: 20px;
+    text-align: center;
 }
 
 #btn {
@@ -24,6 +25,8 @@
     border-radius: 20px;
     font-size: 16px;
     cursor: pointer;
+    display: block;
+    margin: 10px auto;
 
 }
 h1, h4 {
@@ -40,4 +43,20 @@ button {
    font-weight: bold;
 
 }
+img {
+    max-width: 100%; 
+    height: auto; 
+    display: block; 
+    margin: 0 auto; 
+}
 
+
+#img1 {
+    width: 300px; 
+    height: auto; 
+}
+
+#img2 {
+    max-width: 300px; 
+    height: auto; 
+}
