--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,10 @@
+body {
+    background-image: url(../IMG/Background-img.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    scroll-behavior: smooth;
+}
+
 /* Declaring Variables */
 :root {
     --nav-header-font: Jacques Francois Shadow;
@@ -9,6 +16,10 @@ body {
     background-size: contain;
     scroll-behavior: smooth;
 }
+
+
+
+
 
 /* Start of Navigation */
 nav {
@@ -58,6 +69,7 @@ header h1 {
 main {
     background: linear-gradient(45deg, #f9f2b0e8, #EEEA92, #f9f8d2);
     margin-top: 18%;
+    padding: 100px;
 }
 
 hr {
@@ -65,7 +77,33 @@ hr {
     opacity: 1.1;
 }
 
+
+
+
+/* Start of About Section */
+.about-message {
+    width: 60%;
+}
+
+.About-Msg-container div img {
+    width: 130%;
+    height: 250px;
+}
+
+.About-section-container {
+    position: relative;
+    left: 5%;
+}
+
+
+
+
+
 /* Start of Benefits Section */
+#benefits-section, #Find-Your-Recipe-Section {
+    margin-top: 100px;
+}
+
 .benefit-section1-container {
     margin: 2% 8% 5% 8%;
 }
@@ -104,12 +142,36 @@ hr {
 
 .benefits-section2-img-container img:hover {
     transform: scale(1.05);
-    cursor: pointer;
 }
 
-.benefits-section2-img-container img:active {
-    cursor: grab;
+
+
+
+/* Start of Find Your Recipe Section */
+#Find-Your-Recipe-Section img {
+    margin-top: 30px;
+    width: 60%;
 }
+
+#Find-Your-Recipe-Section div {
+    background: #B09C37;
+    padding: 14px 0 14px 0;
+    margin: 20px 44% 100px 44%;
+    border-radius: 40px;
+    transition: 1s;
+}
+
+#Find-Your-Recipe-Section div:hover {
+    background: #7b6b16;
+}
+
+#Find-Your-Recipe-Section a {
+    text-decoration: none;
+    color: #000;
+}
+
+
+
 
 /* Start of Footer */
 footer {
