--- a/CSS/Search_Recipe.css
+++ b/CSS/Search_Recipe.css
@@ -1,4 +1,3 @@
-
 body {
     background: linear-gradient(45deg, #f9f2b0e8, #EEEA92, #f9f8d2);
 }
@@ -8,6 +7,7 @@ nav {
     background: #e8de17d0;
     font-size: 25px;
 }
+
 
 .nav-icon {
     width: 50px;
@@ -31,7 +31,8 @@ h2 {
     font-family: Hahmlet;
 }
 
-h3, p {
+h3,
+p {
     font-family: Fraunces;
 }
 
@@ -41,13 +42,14 @@ h1 {
 }
 
 /* Styling Hard coded Elements */
-form input, form button {
+form input,
+form button {
     border-radius: 50px;
     font-family: Junge;
     margin-top: 20px;
 }
 
-form input{
+form input {
     padding-left: 10px;
     font-size: 18px;
 }
@@ -72,6 +74,7 @@ form input{
     width: 100%;
     height: 150px;
 }
+
 .Recipe-Container h6 {
     margin: 10px;
     text-align: left;
