converted all images to webp

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../Images/Background-img.jpg');
+    background-image: url('../Images/Background-img.webp');
     background-repeat: no-repeat;
     background-size: contain;
     scroll-behavior: smooth;
